# rhythmium

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.sh  prep.sh  rustc-ice-2024-10-02T01_25_02-15701.txt  source writeup.md
cef-sys/: Cargo.toml  build.rs  wrapper.h
cef-sys/src/: lib.rs
cef_mac_helper/: Cargo.toml
cef_mac_helper/src/: main.rs  main_mac.rs
cef_wrapper/: CMakeLists.txt  Cargo.toml  build.rs  wrapper.h  wrapper.hpp
cef_wrapper/cef/: .gitignore  CMakeLists old.txt  CMakeLists.txt
cef_wrapper/cef/cmake/: CEFVersion.cmake
cef_wrapper/cef/examples/: CMakeLists.txt
cef_wrapper/cef/examples/minimal/: CMakeLists.txt  main_minimal.cc  main_minimal.h
cef_wrapper/cef/rhythmium/: CMakeLists.txt  app_browser.cc  app_other.cc  app_renderer.cc  client.cc  main.cc  process_helper_mac.cc
cef_wrapper/cef/shared/: CMakeLists.txt  browser_util.cc  client_manager.cc  client_util.cc  client_util_mac.mm  main_linux.cc  main_mac.mm  main_win.cc  process_helper_mac.cc  resource_util.cc  resource_util_mac.mm  resource_util_posix.cc  resource_util_win.cc
cef_wrapper/cef/src/: CMakeLists.txt  app_browser.cc  app_factory.cc  app_factory.h  browser_util.cc  client.cc  client.h  client_display_handler.cc  client_life_span_handler.cc  client_manager.cc  client_manager.h  client_render_handler.cc  create_browser.cc  create_browser.h  process_helper_mac.cc  process_helper_mac.h  start_subprocess.cc  start_subprocess.h  subprocess_util.cc  subprocess_util.h
cef_wrapper/cef/src/old/: CMakeLists.txt
cef_wrapper/src/: anonymize.rs  browser.rs  browser_host.rs  lib.rs
cmake/: CEFPlatform.cmake  CEFVersion.cmake  DownloadCEF.cmake
cozal/: Cargo.toml
cozal/src/: lib.rs
cozal/src/source/: mod.rs  source_poll.rs
cozal/src/source/adapters/: event_stream.rs  interrupt_stream.rs  mod.rs  state_function_source.rs
cozal/src/source/adapters/transpose/: builder.rs  channel_status.rs  erased_input_source.rs  erased_input_source_collection.rs  input_buffer.rs  input_channel_reservations.rs  input_source_collection.rs  input_source_metadata.rs  mod.rs  steps.rs  test.rs  transpose_interrupt_waker.rs  working_timeline_slice.rs
cozal/src/source/adapters/transpose/test/: basic_happy_path.rs  mod.rs  no_input.rs  state_only_input.rs
cozal/src/source/sources/: mod.rs
cozal/src/source/sources/transposer/: no_input_transposer.rs  steps.rs
cozal/src/source/sources/transposer/channels/: free.rs  interpolation_future.rs  mod.rs  original_step_future.rs  repeat_step_future.rs
cozal/src/source/traits/: source.rs  source_ext.rs
cozal/src/testing/: mod.rs
cozal/src/transposer/: context.rs  input_erasure.rs  input_state_manager.rs  input_state_requester.rs  mod.rs  multi_input_state.rs  output_event_manager.rs  schedule_storage.rs  single_input_state.rs
cozal/src/transposer/evaluate_to/: evaluate_to.rs  test.rs
cozal/src/transposer/step/: expire_handle_factory.rs  future_input_container.rs  init_context.rs  init_step.rs  interpolate_context.rs  interpolation.rs  mod.rs  previous_step.rs  step.rs  step_inputs.rs  sub_step_update_context.rs  test.rs  time.rs  transposer_metadata.rs  wrapped_transposer.rs
cozal/src/transposer/step/pre_init_step/: mod.rs
cozal/src/transposer/step/sub_step/: boxed_input.rs  boxed_input_sub_step.rs  init_sub_step.rs  input_sub_step.rs  mod.rs  scheduled_sub_step.rs
cozal/src/transposer/step/test/: basic_saturating.rs  event_emission.rs  input_event_handling.rs  mod.rs
cozal/src/transposer/test/: test_transposer.rs
cozal/src/util/: extractable_rpds.rs  mod.rs  observing_waker.rs  replace_mut.rs  replace_waker.rs  stack_waker.rs
cozal/src/util/extended_entry/: btree_map.rs  hash_map.rs  option.rs  vecdeque.rs
rhythmium/: Cargo.toml  build.rs
rhythmium/src/: cef_app.rs  example_scene.jsonc  main.rs  scene.rs  scene_renderer.rs  shader.wgsl  view.rs
rhythmium/src/scene/: image_view.rs  image_view.wgsl  mod.rs  root_renderer.rs  root_surface.rs  scene_renderer.rs  scene_view.rs  scene_view.wgsl  shared_wgpu_state.rs  solid_color_view.rs  view.rs  view_surface.rs  web_view.rs  web_view.wgsl
rhythmium/src/scene/web_view/: mod.rs
rust-cef/: Cargo.toml
rust-cef-demo/: CMakeLists.txt  Cargo.toml  build.rs
rust-cef-demo/src/: app.rs  base.rs  client.rs  life_span_handler.rs  main.rs  strings.rs
rust-cef/src/: app.rs  browser_host_create_browser.rs  browser_settings.rs  cef_app.rs  cef_command_line.rs  cef_resource_bundle_handler.rs  cef_scheme_registrar.rs  client.rs  color.rs  command_line.rs  execute_process.rs  initialize.rs  lib.rs  log_items.rs  log_severity.rs  message_loop.rs  rect.rs  resource_bundle_handler.rs  scheme_options.rs  scheme_registrar.rs  settings.rs  window_info.rs
rust-cef/src/macros/: mod.rs
rust-cef/src/util/: cef_arc.rs  cef_base.rs  cef_box.rs  cef_string.rs  cef_type.rs  into_rust_arg.rs  mod.rs
rust_cef/: Cargo.toml
rust_cef/src/: lib.rs
rust_cef/src/c_to_rust/: browser.rs  browser_host.rs  command_line.rs  mod.rs
rust_cef/src/enums/: color_type.rs  log_item.rs  log_severity.rs  mod.rs  paint_element_type.rs  state.rs
rust_cef/src/functions/: cef_execute_process.rs  initialize.rs  message_loop.rs  mod.rs  try_start_subprocess.rs
rust_cef/src/macros/: mod.rs
rust_cef/src/rust_to_c/: app.rs  browser_process_handler.rs  client.rs  life_span_handler.rs  load_handler.rs  mod.rs  render_handler.rs
rust_cef/src/structs/: browser_settings.rs  geometry.rs  main_args.rs  mod.rs  screen_info.rs  settings.rs  window_info.rs
rust_cef/src/util/: cef_arc.rs  cef_arc_mut.rs  cef_box.rs  cef_string.rs  cef_type.rs  mod.rs  starts_with.rs  wrap_boolean.rs
scripts/: build.sh  clean.sh  prep.sh
