[workspace]
resolver = "2"
members = [
  "rhythmium",
  "rust_cef",
  "cef_wrapper",
  "cef_mac_helper",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mason Boeman <masonboeman@gmail.com"]

[workspace.dependencies]
anyhow = "1.0.75"
bytemuck = { version = "1.14.0", features = ["derive"] }
cef_wrapper = { path = "./cef_wrapper" }
rust_cef = { path = "./rust_cef" }
env_logger = "0.10.1"
futures = "0.3.29"
image = "0.24.7"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
wgpu = "22.0"
winit = "0.30.4"
fs_extra = "1.3"
