[workspace]
resolver = "2"
members = [
  "rhythmium",
  "rust_cef",
  "cef_wrapper",
  "cef_mac_helper",
  "cozal",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mason Boeman <masonboeman@gmail.com"]

[workspace.dependencies]
anyhow = "1.0.75"
bytemuck = { version = "1.14.0", features = ["derive"] }
cef_wrapper = { path = "./cef_wrapper" }
cozal = { path = "./cozal" }
env_logger = "0.11.3"
fs_extra = "1.3"
futures = "0.3.29"
image = "0.24.7"
log = "0.4.22"
parking_lot = "0.12"
rand = "0.8.5"
rust_cef = { path = "./rust_cef" }
serde = { version = "1.0.193", features = ["derive"] }
taffy = "0.5.2"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
wgpu = "22.0"
winit = "0.30.4"
