[package]
name = "cef_wrapper"
description = "A Rhythm Game Client"
version.workspace = true
edition.workspace = true

[dependencies]
link-cplusplus = { version = "1.0", features = ["libc++"] }

[build-dependencies]
cmake = "0.1.50"
regex = "1.10.2"
scratch.workspace = true
fs_extra.workspace = true
