[package]
name = "cef_wrapper"
description = "A Rhythm Game Client"
version.workspace = true
edition.workspace = true

[dependencies]
link-cplusplus = { version = "1.0", features = ["libc++"] }
futures.workspace = true
argv = "0.1"

[build-dependencies]
cmake = "0.1"
regex = "1.10"
fs_extra.workspace = true
bindgen = "0.69"
