[package]
name = "cozal"
description = "A deterministic timewarpable game logic pipeline"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.75"
rpds = "1.1.0"
futures = "0.3.31"
futures-channel = "0.3.31"
futures-util = "0.3.31"
futures-executor = "0.3.31"
futures-test = "0.3.31"
uuid = { version = "1.10.0", features = ["v4"] }
type_erased_vec = "0.2.0"
rand.workspace = true
rand_chacha = "0.3.1"
parking_lot.workspace = true
archery = "1.1.0"
smallvec = "1.13.2"
hashbrown = "0.15.2"
itertools = "0.14.0"