[package]
name = "rhythmium"
description = "A Rhythm Game Client"
version.workspace = true
edition.workspace = true
default-run = "rhythmium"

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
env_logger.workspace = true
image = { workspace = true, features = ["jpeg", "png"] }
log.workspace = true
rand = "0.8.5"
serde.workspace = true
slotmap = "1.0.7"
taffy = { version = "0.3.18", features = ["serde"] }
tokio.workspace = true
wgpu.workspace = true
winit.workspace = true
futures.workspace = true
rust_cef.workspace = true
parking_lot = "0.12"
