[package]
name = "rhythmium"
description = "A Rhythm Game Client"
version.workspace = true
edition.workspace = true
default-run = "rhythmium"

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
env_logger.workspace = true
futures.workspace = true
image = { workspace = true, features = ["jpeg", "png"] }
log.workspace = true
parking_lot = "0.12"
rand = "0.8.5"
rust_cef.workspace = true
serde.workspace = true
taffy = { version = "0.5.2", features = ["serde"] }
tokio.workspace = true
wgpu.workspace = true
winit.workspace = true

[features]
default = []
bundled = ["rust_cef/bundled"]
