[package]
name = "rhythmium"
description = "A Rhythm Game Client"
version.workspace = true
edition.workspace = true
default-run = "rhythmium"

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
env_logger.workspace = true
futures.workspace = true
image = { workspace = true, features = ["jpeg", "png"] }
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
rust_cef.workspace = true
serde.workspace = true
taffy = { workspace = true, features = ["serde"] }
tokio.workspace = true
wgpu.workspace = true
winit.workspace = true

[features]
default = []
bundled = ["rust_cef/bundled"]
