[package]
name = "rust-cef-demo"
version = "0.1.0"
edition = "2021"
description = "Rust CEF Demo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cef-sys = { path = "../cef-sys" }
winit = "0.28.7"
argv = "0.1.9"

[package.metadata.bundle]
name = "rust-cef-demo"
version = "0.0.1"
osx_frameworks = [
  "../cef-sys/cef_binary_115.3.11+ga61da9b+chromium-115.0.5790.114_macosarm64_minimal/Release/Chromium Embedded Framework.framework",
]
